k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-node-app
  labels:
    app: sample-node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-node-app
  template:
    metadata:
      labels:
        app: sample-node-app
    spec:
      containers:
        - name: sample-node-app
          image: __ECR_IMAGE__
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
